--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 #ignore the app/Old Files dir. that serves as essentially a trash can (but without actually deleting anything) for all out of date and non-relevant content
 app/Old Files/**
+
+#nobody wants to see any of this
+.sass-cache
+.DS_Store
